--- a/Test.ipynb
+++ b/Test.ipynb
@@ -9,35 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,6 +117,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
    "outputs": [],
@@ -228,6 +207,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1683380354179094"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.113496 * (365 ** 0.5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -236,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,13 +301,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "port_ret = ret_df[signal].fillna(0)\n",
     "port_ret = port_ret.sum(axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "time\n",
+       "2019-09-17 08:00:00    1.000000\n",
+       "2019-09-18 08:00:00    1.000000\n",
+       "2019-09-19 08:00:00    1.000000\n",
+       "2019-09-20 08:00:00    1.000000\n",
+       "2019-09-21 08:00:00    1.000000\n",
+       "                         ...   \n",
+       "2021-01-24 08:00:00    5.561088\n",
+       "2021-01-25 08:00:00    5.263047\n",
+       "2021-01-26 08:00:00    5.455098\n",
+       "2021-01-27 08:00:00    4.948154\n",
+       "2021-01-28 08:00:00    5.123592\n",
+       "Length: 500, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(port_ret+1).cumprod()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09246227552428281"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "port_ret.mean()/port_ret.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1147,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1407,7 @@
        "ETHUSDT  -0.072847  0.821696  1.000000"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1436,7 @@
        "<AxesSubplot:xlabel='time'>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1401,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1468,7 @@
        "<AxesSubplot:xlabel='time'>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
