Add out-of-sample test

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,10 +110,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ticker</th>\n",
+       "      <th>BTCUSDT</th>\n",
+       "      <th>ETHUSDT</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-09-17 08:00:00</th>\n",
+       "      <td>10187.82</td>\n",
+       "      <td>207.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-18 08:00:00</th>\n",
+       "      <td>10156.99</td>\n",
+       "      <td>210.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-19 08:00:00</th>\n",
+       "      <td>10244.29</td>\n",
+       "      <td>220.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-20 08:00:00</th>\n",
+       "      <td>10168.59</td>\n",
+       "      <td>218.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-21 08:00:00</th>\n",
+       "      <td>9986.39</td>\n",
+       "      <td>215.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-24 08:00:00</th>\n",
+       "      <td>32259.90</td>\n",
+       "      <td>1392.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-25 08:00:00</th>\n",
+       "      <td>32254.20</td>\n",
+       "      <td>1317.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-26 08:00:00</th>\n",
+       "      <td>32467.77</td>\n",
+       "      <td>1365.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-27 08:00:00</th>\n",
+       "      <td>30366.15</td>\n",
+       "      <td>1239.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-28 08:00:00</th>\n",
+       "      <td>31120.96</td>\n",
+       "      <td>1282.96</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        close         \n",
+       "ticker                BTCUSDT  ETHUSDT\n",
+       "time                                  \n",
+       "2019-09-17 08:00:00  10187.82   207.84\n",
+       "2019-09-18 08:00:00  10156.99   210.21\n",
+       "2019-09-19 08:00:00  10244.29   220.24\n",
+       "2019-09-20 08:00:00  10168.59   218.03\n",
+       "2019-09-21 08:00:00   9986.39   215.05\n",
+       "...                       ...      ...\n",
+       "2021-01-24 08:00:00  32259.90  1392.51\n",
+       "2021-01-25 08:00:00  32254.20  1317.88\n",
+       "2021-01-26 08:00:00  32467.77  1365.97\n",
+       "2021-01-27 08:00:00  30366.15  1239.03\n",
+       "2021-01-28 08:00:00  31120.96  1282.96\n",
+       "\n",
+       "[500 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wide_df"
+   ]
   },
   {
    "cell_type": "code",
